<resources>
    <string name="app_name">Shepherd</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="recipe_details_preview">this is the recipes details, some text to test the appearance of
        the view It\'s time for a truly uncompromising smartphone. One that was designed and
        manufactured by technical enthusiasts - in close coordination with the future users. A
        smartphone that perfectly combines fascinating technology, groundbreaking design and
        breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince
        yourself.
    </string>
    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="title_activity_on_boarding">OnBoarding</string>
    <string name="title_activity_walk_through">Walk Through</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_add_loved_one">Add Loved One</string>
    <string name="title_activity_add_loved_one_condition">Add Loved One Condition</string>
    <string name="title_activity_join_care_team">Join CareTeam</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_subscription">Subscription</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_email_and_password">Please check your email and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">sumit</string>
    <string name="test_email">sumit@sumit.sumit</string>
    <string name="test_number">900–111–1111</string>
    <string name="test_name">Mary Tyler</string>
    <string name="test_name_n">Sushan\nFisher</string>
    <string name="test_first_name">Mary</string>
    <string name="test_address">402 Harvey Lane Ponte Vedra Beach FL 32082</string>
    <string name="loading">Loading</string>
    <string name="email">Email</string>
    <string name="email_">Email<font color="#D7293F">*</font></string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="log_in">Log In</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="reset_it">Reset it</string>
    <string name="reset">Reset</string>
    <string name="set">Set</string>
    <string name="already_have_account">Already have account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password_description">\u0020 and we\'ll send you instruction on how to reset your password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="welcome_info">A simple, advanced system for managing the healthcare and resources of a Loved One</string>
    <string name="password_at_least_8_characters">Password has to be at Least 8 characters long</string>
    <string name="tell_us_a_little_about">Tell us a little about your loved one</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="address_optional">Address (Optional)</string>
    <string name="custom_address">Alternate Address</string>
    <string name="date_of_birth">Date of Birth<font color="#D7293F">*</font></string>
    <string name="str_continue">Continue</string>
    <string name="select_date">Select Date</string>
    <string name="create_account">Create Account</string>
    <string name="us_phone_pattern">+1 (###) ###-####</string>
    <string name="does_name_have_any_conditions">Does {Name} have any conditions?</string>
    <string name="start_typing_condition">Start typing condition</string>
    <string name="finish">Finish</string>
    <string name="diabetes">Diabetes</string>
    <string name="join_an_existing_careteam">Join an existing CareTeam</string>
    <string name="join">Join</string>
    <string name="you_have_been_invited_to">You have been invited to:</string>
    <string name="hi_firstname">Hi, FirstName</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="care_team">CareTeam</string>
    <string name="members_count">5</string>
    <string name="members">Members</string>
    <string name="view_members">View Members</string>
    <string name="task_s_for_today">Task(s) for today</string>
    <string name="no_events">No Events</string>
    <string name="care_points">CarePoints</string>
    <string name="discussions">Discussions</string>
    <string name="view_care_points">View CarePoints</string>
    <string name="lock_box">LockBox</string>
    <string name="files_in_your_lockbox">Files in your lockbox</string>
    <string name="no_documents_yet">No documents yet</string>
    <string name="view_documents">View Documents</string>
    <string name="medlist">MedList</string>
    <string name="medications_for_today">Medications for today</string>
    <string name="no_dosage">No dosage</string>
    <string name="view_medications">View Medications</string>
    <string name="messages">Messages</string>
    <string name="unread_messages">Unread Message(s)</string>
    <string name="last_message_from">Last message from Roberto Flox</string>
    <string name="view_messages">View Messages</string>
    <string name="resources">Resources</string>
    <string name="new_article_and_topics">New articles and topics</string>
    <string name="last_article_published">Last article published an hour ago</string>
    <string name="view_resources">View Resources</string>
    <string name="add_loved_one">Add Loved One</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="empty"> </string>
    <string name="start_typing">Start Typing…</string>
    <string name="add_new_member">Add New Member</string>
    <string name="menu_care_team_members">CareTeam Members</string>
    <string name="vital_stats">VitalStats</string>
    <string name="menu_add_new_care_team_member">Add New CareTeam Members</string>
    <string name="menu_member_details">CareTeam Member Details</string>
    <string name="menu_add_new_event">Add new event</string>
    <string name="menu_event_details">Event Details</string>
    <string name="menu_add_new_medication">Add New Medication</string>
    <string name="care_hub">CareHub</string>
    <string name="select_role">Select Role</string>
    <string name="no_shepherd_account">No Shepherd account associated with this email. Send an invite</string>
    <string name="care_team_leader">CareTeam Leader</string>
    <string name="invite">Invite</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="remove_from_care_team">Remove from CareTeam</string>
    <string name="delete">Delete</string>
    <string name="test_title"><![CDATA[BP Prescription Change & Monitor]]></string>
    <string name="test_doctor">Dr. Allergan Office</string>
    <string name="test_date">Mon, Jan 18</string>
    <string name="test_time">2:15 PM</string>
    <string name="test_date_time">Sunday, JAN 17TH, 9:45 AM</string>
    <string name="test_text">editors now use Lorem Ipsum as their default model text, and a search for editors now use Lorem Ipsum as their default model text, and a search for </string>
    <string name="test_text_small">using Lorem Ipsum is that it has a more-or-less normal distribution of letters</string>
    <string name="your_message">Your Message</string>
    <string name="reply">Reply</string>
    <string name="schedule_medicine">Schedule medicine</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="assign_to">Assign To</string>
    <string name="select_time">Select Time</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="note_with_colon">Note : </string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="add_new_task">Add New Task</string>
    <string name="test_2_15_pm"><b>2:15</b>\nPM</string>
    <string name="test_count">4</string>
    <string name="new_document">New Document</string>
    <string name="search">Search</string>
    <string name="recommended_documents">Recommended Documents</string>
    <string name="test_hcpa">HCPA</string>
    <string name="other_documents">Other Documents</string>
    <string name="rename">Rename</string>
    <string name="test_medicare_id_number">Medicare ID Number</string>
    <string name="test_medicine_name">Lipitor</string>
    <string name="new_medication">New Medication</string>
    <string name="my_reminders">My Reminders</string>
    <string name="my_medications">My Medications</string>
    <string name="add_new_medication">Add New Medication</string>
    <string name="dose">Dose</string>
    <string name="test_dose">160 mg</string>
    <string name="menu_medication_details">Medication Details</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_care_points">CarePoints</string>
    <string name="menu_lock_box">LockBox</string>
    <string name="menu_lock_box_info">LockBox Doc Info</string>
    <string name="menu_my_med_list">My MedList</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_new_message">New Message</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_resources">Resources</string>
    <string name="v1_0_all_rights_reserved">©2023 The Shepherd Company LLC. All rights reserved.</string>
    <string name="log_in_to_access_your_account">Log in to access your \naccount</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_on_app">New on app?</string>
    <string name="or_login_with_biometric">Or login with biometrics</string>
    <string name="choose_your_subscription">Choose a Subscription Plan to add your Loved One.</string>
    <string name="buy_subscription_plan">Purchase a Subscription Plan</string>
</resources>