<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.app.shepherd.ui.component.dashboard.DashboardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboard_to_care_team_members"
            app:destination="@+id/nav_care_team_members" />

        <action
            android:id="@+id/action_dashboard_to_add_new_event"
            app:destination="@+id/nav_add_new_event" />

        <action
            android:id="@+id/action_dashboard_to_event_details"
            app:destination="@+id/nav_event_details" />

        <action
            android:id="@+id/action_dashboard_to_medication_list"
            app:destination="@+id/nav_add_new_medication" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.app.shepherd.ui.component.home.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.app.shepherd.ui.component.home.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_care_team_members"
        android:name="com.app.shepherd.ui.component.careTeamMembers.CareTeamMembersFragment"
        android:label="@string/menu_care_team_members"
        tools:layout="@layout/fragment_care_team_members">

        <action
            android:id="@+id/action_care_team_members_to_add_team_member"
            app:destination="@+id/nav_add_care_team_member" />
        <action
            android:id="@+id/action_care_team_members_to_member_details"
            app:destination="@+id/nav_team_member_details" />

    </fragment>

    <fragment
        android:id="@+id/nav_add_care_team_member"
        android:name="com.app.shepherd.ui.component.addMember.AddMemberFragment"
        android:label="@string/menu_add_new_care_team_member"
        tools:layout="@layout/fragment_add_member" />
    <fragment
        android:id="@+id/nav_team_member_details"
        android:name="com.app.shepherd.ui.component.memberDetails.MemberDetailsFragment"
        android:label="@string/menu_member_details"
        tools:layout="@layout/fragment_member_details" />

    <fragment
        android:id="@+id/nav_add_new_event"
        android:name="com.app.shepherd.ui.component.addNewEvent.AddNewEventFragment"
        android:label="@string/menu_add_new_event"
        tools:layout="@layout/fragment_add_new_event" />
    <fragment
        android:id="@+id/nav_event_details"
        android:name="com.app.shepherd.ui.component.eventDetails.EventDetailsFragment"
        android:label="@string/menu_event_details"
        tools:layout="@layout/fragment_event_details" />

    <fragment
        android:id="@+id/nav_add_new_medication"
        android:name="com.app.shepherd.ui.component.addNewMedication.AddNewMedicationFragment"
        android:label="@string/menu_add_new_medication"
        tools:layout="@layout/fragment_add_new_medication">

        <action
            android:id="@+id/action_add_new_medication_to_add_medication_details"
            app:destination="@+id/nav_medication_details" />

    </fragment>

    <fragment
        android:id="@+id/nav_medication_details"
        android:name="com.app.shepherd.ui.component.addMedicationDetails.AddMedicationDetailsFragment"
        android:label="@string/menu_medication_details"
        tools:layout="@layout/fragment_add_medication_details" />

</navigation>