<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{listener::onClick}"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewGothamBold"
        android:id="@+id/txtBuySubscriptionPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_subscription_plan"
        android:textSize="@dimen/_16ssp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewGothamBook"
        android:id="@+id/txtChoosePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_subscription"
        android:lineSpacingMultiplier="1.3"
        android:textSize="@dimen/_16ssp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuySubscriptionPlan" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerSubscription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChoosePlan"
        app:layout_constraintBottom_toTopOf="@id/companyInfoTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/companyInfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/gotham_light"
        android:text="@string/v1_0_all_rights_reserved"
        android:textColor="@color/_192032"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>